tests/test_files/invalid/semantic/struct_defined_multiple_times.pfdl
# SPDX-FileCopyrightText: The PFDL Contributors
# SPDX-License-Identifier: MIT

Struct TestStruct
    attribute: string
End

# Name of the Struct is already assigned
Struct TestStruct
    attribute: number
End